# Team_code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  team2_agent.py  test_agent.py
catkin_ws/: 2024-08-07-10-54-28.bag  2024-08-07-11-59-50.bag  2024-08-07-12-57-45.bag
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/team2_package/: globalwaypoints.h  keyboard_msg.h  localization_perform_measure.h  longitudinal_controller.h  tracked_object.h  tracked_object_array.h  vehicle_state.h
catkin_ws/devel/lib/pkgconfig/: team2_package.pc  vision_msgs.pc
catkin_ws/devel/lib/python3/dist-packages/team2_package/msg/: __init__.py  _globalwaypoints.py  _keyboard_msg.py  _localization_perform_measure.py  _longitudinal_controller.py  _tracked_object.py  _tracked_object_array.py  _vehicle_state.py
catkin_ws/devel/lib/team2_package/: behavior_planner  carla_route_saver.py  controller  gps_to_xyz  keyboard  keyboard_control  localizer  pseudo_controller
catkin_ws/devel/share/common-lisp/ros/team2_package/msg/: _package.lisp  _package_globalwaypoints.lisp  _package_keyboard_msg.lisp  _package_localization_perform_measure.lisp  _package_longitudinal_controller.lisp  _package_tracked_object.lisp  _package_tracked_object_array.lisp  _package_vehicle_state.lisp  globalwaypoints.lisp  keyboard_msg.lisp  localization_perform_measure.lisp  longitudinal_controller.lisp  team2_package-msg.asd  tracked_object.lisp  tracked_object_array.lisp  vehicle_state.lisp
catkin_ws/devel/share/gennodejs/ros/team2_package/msg/: _index.js  globalwaypoints.js  keyboard_msg.js  localization_perform_measure.js  longitudinal_controller.js  tracked_object.js  tracked_object_array.js  vehicle_state.js
catkin_ws/devel/share/gennodejs/ros/vision_msgs/msg/: _index.js
catkin_ws/devel/share/roseus/ros/team2_package/: manifest.l
catkin_ws/devel/share/roseus/ros/team2_package/msg/: globalwaypoints.l  keyboard_msg.l  localization_perform_measure.l  longitudinal_controller.l  tracked_object.l  tracked_object_array.l  vehicle_state.l
catkin_ws/devel/share/roseus/ros/vision_msgs/: manifest.l
catkin_ws/devel/share/team2_package/cmake/: team2_package-msg-extras.cmake  team2_package-msg-paths.cmake  team2_packageConfig.cmake
catkin_ws/devel/share/vision_msgs/cmake/: vision_msgs-msg-extras.cmake  vision_msgs-msg-paths.cmake  vision_msgsConfig.cmake
catkin_ws/src/team2_package/: CMakeLists.txt  package.xml
catkin_ws/src/team2_package/config/: visualizer.rviz
catkin_ws/src/team2_package/include/: behavior_planner.hpp  controller.hpp  detector.hpp  detector_test.hpp  filter.hpp  filter_ver_2.hpp  global_planner.hpp  gps_to_xyz.hpp  keyboard.hpp  localizer.hpp
catkin_ws/src/team2_package/launch/: control_test.launch  detector.launch  filter.launch  filter_ver_2.launch  team2_ros_bridge.launch  test.launch
catkin_ws/src/team2_package/msg/: globalwaypoints.msg  keyboard_msg.msg  localization_perform_measure.msg  tracked_object.msg  tracked_object_array.msg
catkin_ws/src/team2_package/src/: CarlaRoute_to_dict.py  team2.rviz
catkin_ws/src/team2_package/src/control/: controller.cpp  controller_utils.cpp  pseudo_controller.cpp
catkin_ws/src/team2_package/src/perception/: detector.cpp  detector_test.cpp  filter.cpp  filter_ver_2.cpp  keyboard.cpp  keyboard_control.cpp  localizer.cpp  rosbag_to_image.py  test.rviz
catkin_ws/src/team2_package/src/planning/: behavior_planner.cpp  global_planner.cpp  global_planner_temp.cpp  gps_to_xyz.cpp
src/: detector.cpp  detector_ver2.cpp  package.xml
src/include/: detector.hpp  detector_ver2.hpp
src/launch/: detector.launch
